--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -578,6 +578,10 @@
     "message": "Save image",
     "description": "Save image"
   },
+  "commandLabelSaveLink": {
+    "message": "Save link",
+    "description": "Save link"
+  },
   "commandLabelPrintTab": {
     "message": "Print",
     "description": "Print"
@@ -870,6 +874,10 @@
   "commandDescriptionSaveImage": {
     "message": "Downloads the image, where the gesture started.",
     "description": "Downloads the image, where the gesture started."
+  },
+  "commandDescriptionSaveLink": {
+    "message": "Downloads either a selected url, or the link where the gesture started.",
+    "description": "Downloads either a selected url, or the link where the gesture started."
   },
   "commandDescriptionPrintTab": {
     "message": "Prints the current page by prompting the print dialog.",
