--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -369,6 +369,10 @@
     "message": "The selected file does not match the required file type.",
     "description": "The selected file does not match the required file type."
   },
+  "aboutResetNotificationAdditionalPermissions": {
+    "message": "This config file contains gestures that may require the acceptance of additional permissions.",
+    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  },
   "aboutResetNotificationConfirm": {
     "message": "All settings including gestures will be reset. This cannot be undone!",
     "description": "All settings including gestures will be reset. This cannot be undone!"
