added search function to command bar (#350)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1209,6 +1209,10 @@
     "message": "Command bar",
     "description": "Command bar"
   },
+  "commandBarSearch": {
+    "message": "Search",
+    "description": "Search"
+  },
   "commandBarSaveButton": {
     "message": "Save",
     "description": "Save"
