--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -285,6 +285,10 @@
     "message": "Wheel gesture mouse button",
     "description": "Wheel gesture mouse button"
   },
+  "extraLabelWheelSensitivity": {
+    "message": "Mouse wheel sensitivity",
+    "description": "Mouse wheel sensitivity"
+  },
   "extraLabelWheelUp": {
     "message": "Wheel up",
     "description": "Wheel up"
@@ -300,6 +304,10 @@
   "extraDescriptionWheelMouseButton": {
     "message": "The mouse button which triggers the wheel gesture.",
     "description": "The mouse button which triggers the wheel gesture."
+  },
+  "extraDescriptionWheelSensitivity": {
+    "message": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered.",
+    "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
 
   "blacklistLabelInformation": {
