--- a/src/_locales/ro_RO/messages.json
+++ b/src/_locales/ro_RO/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands.",
+    "message": "Navigează, operează și răsfoiește mai repede cu gesturi de mouse! Un supliment personalizabil pentu gesturi cu mouse-ul cu o varietate de comenzi.",
     "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
@@ -276,7 +276,7 @@
     "description": "Wheel gesture mouse button"
   },
   "extraLabelWheelSensitivity": {
-    "message": "Mouse wheel sensitivity",
+    "message": "Sensibilitatea rotiței mouse-ului",
     "description": "Mouse wheel sensitivity"
   },
   "extraLabelWheelUp": {
@@ -296,7 +296,7 @@
     "description": "The mouse button which triggers the wheel gesture."
   },
   "extraDescriptionWheelSensitivity": {
-    "message": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered.",
+    "message": "Minimul cât trebuie rotită rotița de scrol pentru a declanșa gestul.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
   "blacklistLabelInformation": {
@@ -304,8 +304,8 @@
     "description": "Information:"
   },
   "blacklistTextInformation": {
-    "message": "Adaugă modele de URL-uri pentru a dezactiva Gesturefy pentru anumite site-uri. Modelele permit metacaractere \"*\" şi trebuie să aibă forma de <scheme>:\/\/<host><path>.",
-    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>."
+    "message": "Adaugă modele de URL-uri pentru a dezactiva Gesturefy pentru anumite site-uri. Modelele permit metacaractere \"*\" şi trebuie să aibă forma de <scheme>://<host><path>.",
+    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
   "blacklistPlaceholderURL": {
     "message": "Introduceţi modelul URL-ului",
@@ -364,7 +364,7 @@
     "description": "The selected file does not match the required file type."
   },
   "aboutResetNotificationAdditionalPermissions": {
-    "message": "This config file contains gestures that may require the acceptance of additional permissions.",
+    "message": "Acest fișier config conține gesturi care ar putea necesita acceptarea unor permisiuni adiționale.",
     "description": "This config file contains gestures that may require the acceptance of additional permissions."
   },
   "aboutResetNotificationConfirm": {
@@ -979,6 +979,14 @@
     "message": "după",
     "description": "after"
   },
+  "commandSettingLabelNewTabPositionStart": {
+    "message": "start",
+    "description": "start"
+  },
+  "commandSettingLabelNewTabPositionEnd": {
+    "message": "șfârșit",
+    "description": "end"
+  },
   "commandSettingLabelNewTabFocus": {
     "message": "Focalizează pe fila nouă",
     "description": "Focus new tab"
@@ -1198,7 +1206,7 @@
     "description": "Command bar"
   },
   "commandBarSearch": {
-    "message": "Search",
+    "message": "Caută",
     "description": "Search"
   },
   "commandBarSaveButton": {
@@ -1326,47 +1334,47 @@
     "description": "Default theme"
   },
   "welcomePageUpperSectionReference": {
-    "message": "Gesturefy has been successfully installed.",
+    "message": "Gesturefy a fost instalat cu succes.",
     "description": "Gesturefy has been successfully installed."
   },
   "welcomePageUpperSectionHeadline": {
-    "message": "Never done a mouse gesture before?\r\n Try it out right now!",
+    "message": "N-ai făcut niciodată un gest cu mouse-ul?\nÎncearcă acum!",
     "description": "Never done a mouse gesture before?\r\n Try it out right now!"
   },
   "welcomePageUpperSectionTutorialStep01": {
-    "message": "Press and hold the right mouse button",
+    "message": "Apasă şi reține butonul din dreapta al mouse-ului",
     "description": "Press and hold the right mouse button"
   },
   "welcomePageUpperSectionTutorialStep02": {
-    "message": "Drag down your mouse",
+    "message": "Trage în jos mouse-ul",
     "description": "Drag down your mouse"
   },
   "welcomePageUpperSectionTutorialStep03": {
-    "message": "Release the right mouse button",
+    "message": "Eliberează butonul din dreapta al mouse-ului",
     "description": "Release the right mouse button"
   },
   "welcomePageLowerSectionReference": {
-    "message": "You scrolled to the bottom of the page.",
+    "message": "Ai derulat până la finalul paginii.",
     "description": "You scrolled to the bottom of the page."
   },
   "welcomePageLowerSectionHeadline": {
-    "message": "Congratulations, you successfully accomplished your very first mouse gesture!",
+    "message": "Felicitări, ai realizat primul tău gest cu mouse-ul!",
     "description": "Congratulations, you successfully accomplished your very first mouse gesture!"
   },
   "welcomePageLowerSectionGetStartedText": {
-    "message": "Create as many gestures as you want to suit your individual browsing style and make your daily browsing easier, faster and a lot more fun. Get started now and personalize Gesturefy!",
+    "message": "Creează cât de multe gesturi ai nevoie pentru stilul tău personal de navigare și fă-ți navigarea zilnică mai ușoară, mai rapidă și mult mai plăcută. Începe acum și personalizează Gesturefy!",
     "description": "Create as many gestures as you want to suit your individual browsing style and make your daily browsing easier, faster and a lot more fun. Get started now and personalize Gesturefy!"
   },
   "welcomePageLowerSectionGetStartedLink": {
-    "message": "Set Up Your Gestures",
+    "message": "Creează Gesturile tale",
     "description": "Set Up Your Gestures"
   },
   "welcomePageLowerSectionLearnMoreText": {
-    "message": "Still confused? Click the link below for a quick break-down and if you can't get Gesturefy up and running you can also find a troubleshooting guide there.",
+    "message": "Încă sunt neclarități? Accesează legătura de mai jos pentru o listă rapidă și dacă nu poți face Gesturefy să funcționezede asemenea poți găsi acolo un ghid de depanare.",
     "description": "Still confused? Click the link below for a quick break-down and if you can't get Gesturefy up and running you can also find a troubleshooting guide there."
   },
   "welcomePageLowerSectionLearnMoreLink": {
-    "message": "Learn More",
+    "message": "Află mai multe",
     "description": "Learn More"
   }
 }
