--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands.",
+    "message": "Ovládejte Váš internetový prohlížeč efektivněji s gesty myší! Doplněk s širokou škálou příkazů ovládaných konfigurovatelnými gesty myší.",
     "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
@@ -48,11 +48,11 @@
     "description": "Gesture mouse button"
   },
   "settingLabelMouseButtonLeft": {
-    "message": "levý",
+    "message": "levé",
     "description": "left"
   },
   "settingLabelMouseButtonRight": {
-    "message": "pravý",
+    "message": "pravé",
     "description": "right"
   },
   "settingLabelMouseButtonMiddle": {
@@ -92,7 +92,7 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "Práh vzdálenosti gesta",
+    "message": "Minimální délka gesta",
     "description": "Gesture distance threshold"
   },
   "settingLabelDistanceSensitivity": {
@@ -164,11 +164,11 @@
     "description": "Text alignment"
   },
   "settingLabelDirectionsTextAlignLeft": {
-    "message": "levý",
+    "message": "vlevo",
     "description": "left"
   },
   "settingLabelDirectionsTextAlignRight": {
-    "message": "pravý",
+    "message": "vpravo",
     "description": "right"
   },
   "settingLabelDirectionsTextAlignCenter": {
@@ -196,7 +196,7 @@
     "description": "Disables the mouse gesture if the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Minimální vzdálenost kterou myš urazí než se aktivuje gesto.",
+    "message": "Minimální délka pohybu myši do aktivace gesta.",
     "description": "The minimum mouse distance until the Gesture gets activated."
   },
   "settingDescriptionDistanceSensitivity": {
@@ -212,7 +212,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
-    "message": "Určuje růst tloušťky čáry.",
+    "message": "Určuje, zda má šířka stopy narůstat.",
     "description": "Determines if the line thickness should grow."
   },
   "settingDescriptionDisplayCommand": {
@@ -240,7 +240,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionUpdateNotification": {
-    "message": "Zobrazit oznámení po aktualizaci Gesturefy.",
+    "message": "Zobrazí oznámení po aktualizaci Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
   "gestureLabelInformation": {
@@ -248,7 +248,7 @@
     "description": "Information:"
   },
   "gestureTextInformation": {
-    "message": "Gesto je posloupnost následujících směrů: ↑ [up], ↓ [down], → [right], ← [left] a nesmí obsahovat stejný směr dvakrát v řadě, jako například ↑↑. Stejnému gestu nelze přiřadit více než jeden příkaz.",
+    "message": "Gesto je posloupnost následujících směrů: ↑ [nahoru], ↓ [dolů], → [doprava], ← [doleva] a nesmí obsahovat stejný směr dvakrát v řadě, jako například ↑↑. Stejnému gestu nelze přiřadit více než jeden příkaz.",
     "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
   },
   "extraLabelRockerActive": {
@@ -280,15 +280,15 @@
     "description": "Mouse wheel sensitivity"
   },
   "extraLabelWheelUp": {
-    "message": "Kolečko nahoru",
+    "message": "Kolečkem nahoru",
     "description": "Wheel up"
   },
   "extraLabelWheelDown": {
-    "message": "Kolečko dolů",
+    "message": "Kolečkem dolů",
     "description": "Wheel down"
   },
   "extraDescriptionWheelActive": {
-    "message": "Posunout nahoru nebo dolů při stisknutém tlačítku pro gesta kolečkem.",
+    "message": "Posunout kolečkem nahoru nebo dolů při stisknutém tlačítku pro gesta kolečkem.",
     "description": "Scroll up or down while holding the wheel gesture trigger button."
   },
   "extraDescriptionWheelMouseButton": {
@@ -304,15 +304,15 @@
     "description": "Information:"
   },
   "blacklistTextInformation": {
-    "message": "Přidat šablony URL pro zakázání Gesturefy na určitých webových stránkách. Šablona povoluje zástupné znaky \"*\" a musí být ve formátu <scheme>:\/\/<host><path>.",
-    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>."
+    "message": "Přidat šablony URL pro zakázání Gesturefy na určitých webových stránkách. Šablona povoluje zástupné znaky \"*\" a musí být ve formátu <scheme>://<host><path>.",
+    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
   "blacklistPlaceholderURL": {
-    "message": "Zadejte vzor pro URL",
+    "message": "Zadejte šablonu pro URL",
     "description": "Enter URL match pattern"
   },
   "blacklistNotificationAlreadyExists": {
-    "message": "Vzor URL adresy již existuje.",
+    "message": "Šablona URL adresy již existuje.",
     "description": "URL pattern already exists."
   },
   "blacklistHintNoEntries": {
@@ -372,7 +372,7 @@
     "description": "All settings including gestures will be reset. This cannot be undone!"
   },
   "commandLabelToggleBookmark": {
-    "message": "Přidat\/odebrat záložku",
+    "message": "Přidat/odebrat záložku",
     "description": "Toggle bookmark"
   },
   "commandLabelDuplicateTab": {
@@ -388,7 +388,7 @@
     "description": "Reload tab"
   },
   "commandLabelReloadFrame": {
-    "message": "Obnovit rámec stránky",
+    "message": "Obnovit tento rám",
     "description": "Reload frame"
   },
   "commandLabelStopLoading": {
@@ -396,11 +396,11 @@
     "description": "Stop loading"
   },
   "commandLabelCloseTab": {
-    "message": "Zavře panel",
+    "message": "Zavřít panel",
     "description": "Close tab"
   },
   "commandLabelRestoreTab": {
-    "message": "Obnovit panel",
+    "message": "Obnovit zavřený panel",
     "description": "Restore tab"
   },
   "commandLabelZoomIn": {
@@ -424,11 +424,11 @@
     "description": "Page forward"
   },
   "commandLabelTogglePin": {
-    "message": "Připnout\/odepnout panel",
+    "message": "Připnout/odepnout panel",
     "description": "Toggle pinned tab"
   },
   "commandLabelToggleMute": {
-    "message": "Vypnout\/zapnout zvuk",
+    "message": "Vypnout/zapnout zvuk",
     "description": "Toggle mute"
   },
   "commandLabelScrollTop": {
@@ -480,7 +480,7 @@
     "description": "Toggle window size"
   },
   "commandLabelToggleFullscreen": {
-    "message": "Zapnout\/vypnout režim celé obrazovky",
+    "message": "Zapnout/vypnout režim celé obrazovky",
     "description": "Toggle full screen"
   },
   "commandLabelNewWindow": {
@@ -544,7 +544,7 @@
     "description": "Open link in new window"
   },
   "commandLabelOpenLinkInNewPrivateWindow": {
-    "message": "Otevřít odkaz v novém soukromém okně",
+    "message": "Otevřít odkaz v novém anonymním okně",
     "description": "Open link in new private window"
   },
   "commandLabelSearchTextSelection": {
@@ -852,11 +852,11 @@
     "description": "Starts a web search of the clipboard text."
   },
   "commandDescriptionCloseRightTabs": {
-    "message": "Zavře všechny panely napravo od aktuálního.",
+    "message": "Zavře všechny panely vpravo od aktuálního.",
     "description": "Closes all tabs to the right side."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "Zavře všechny panely nalevo od aktuálního, kromě připnutých panelů.",
+    "message": "Zavře všechny panely vlevo od aktuálního, kromě připnutých panelů.",
     "description": "Closes all tabs to the left side, excluding pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
@@ -908,11 +908,11 @@
     "description": "If the clipboard contains an URL, it will be opened in a new tab."
   },
   "commandDescriptionOpenAddonSettings": {
-    "message": "Otevřít stránku s nastavením Gesturefy.",
+    "message": "Otevře stránku s nastavením Gesturefy.",
     "description": "Opens the Gesturefy settings page."
   },
   "commandDescriptionOpenLink": {
-    "message": "Otevře vybraný odkaz, nebo odkaz, nad kterým začalo gesto.",
+    "message": "Otevře vybraný odkaz, nebo odkaz, na kterém začalo gesto.",
     "description": "Opens either a selected url, or the link where the gesture started."
   },
   "commandDescriptionViewImage": {
@@ -960,7 +960,7 @@
     "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
   },
   "commandDescriptionSendMessageToOtherAddon": {
-    "message": "Odešle vlastní zprávu jinému doplňku. Umožňuje použít funkce ostatních doplňků.",
+    "message": "Odešle volitelnou zprávu jinému doplňku. Umožňuje použít funkce ostatních doplňků.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
   },
   "commandSettingLabelNewTabPosition": {
@@ -976,8 +976,16 @@
     "description": "before"
   },
   "commandSettingLabelNewTabPositionAfter": {
-    "message": "po",
+    "message": "za",
     "description": "after"
+  },
+  "commandSettingLabelNewTabPositionStart": {
+    "message": "začátek",
+    "description": "start"
+  },
+  "commandSettingLabelNewTabPositionEnd": {
+    "message": "konec",
+    "description": "end"
   },
   "commandSettingLabelNewTabFocus": {
     "message": "Přepnout na nový panel",
@@ -996,7 +1004,7 @@
     "description": "previous"
   },
   "commandSettingLabelTabNextFocusNext": {
-    "message": "další",
+    "message": "následující",
     "description": "next"
   },
   "commandSettingLabelTabNextFocusRecently": {
@@ -1040,7 +1048,7 @@
     "description": "Search engine URL"
   },
   "commandSettingLabelSavePromptDialog": {
-    "message": "Dialogové okno příkazového řádku",
+    "message": "Zobrazit okno \"Uložit jako\"",
     "description": "Prompt dialog"
   },
   "commandSettingLabelCustomURL": {
@@ -1060,7 +1068,7 @@
     "description": "Parse message"
   },
   "commandSettingLabelTabOrder": {
-    "message": "Pořadí penlů",
+    "message": "Pořadí panelů",
     "description": "Tab order"
   },
   "commandSettingLabelTabOrderNone": {
@@ -1100,7 +1108,7 @@
     "description": "Determines if the opened tab should gain focus or not."
   },
   "commandSettingDescriptionTabNextFocus": {
-    "message": "Určuje, na který další panel se přepne následně.",
+    "message": "Určuje, na který panel se následně přepnout.",
     "description": "Determines which tab should be focused next."
   },
   "commandSettingDescriptionTabClosePinned": {
@@ -1112,11 +1120,11 @@
     "description": "Determines if only tabs which belong to the current window should be restored."
   },
   "commandSettingDescriptionReloadCache": {
-    "message": "Určuje, zda má být znovu načtena vyrovnávací paměť.",
+    "message": "Určuje, zda má být obnovena vyrovnávací paměť.",
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Krok přiblížení\/oddálení v procentech. Pokud není zadaná hodnota, použije se výchozí.",
+    "message": "Krok přiblížení/oddálení v procentech. Pokud není zadaná hodnota, použije se výchozí.",
     "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
@@ -1124,7 +1132,7 @@
     "description": "The duration in milliseconds the scroll animation should take."
   },
   "commandSettingDescriptionFocusIncludePinned": {
-    "message": "Určuje, zda budou připnuté panely považovány za panely úplně nalevo.",
+    "message": "Určuje, zda budou připnuté panely považovány za panely úplně nalevo (první).",
     "description": "Determines if pinned tabs should be treated as the leftmost tabs."
   },
   "commandSettingDescriptionOpenEmptyTab": {
@@ -1132,11 +1140,11 @@
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionOpenEmptyWindow": {
-    "message": "Určuje, zda otevřít prázdný panel, pokud není vybrána URL nebo odkaz.",
+    "message": "Určuje, zda otevřít prázdné onko pokud není vybrána URL nebo odkaz.",
     "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "Vlastní URL hledání, ke které se připojí hledaný text. Pokud je prázdná, bude použitý výchozí vyhledávač.",
+    "message": "Vlastní URL hledání, ke které se připojí hledaný text. Pokud je prázdná, bude použit výchozí vyhledávač.",
     "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
   },
   "commandSettingDescriptionSavePromptDialog": {
@@ -1156,7 +1164,7 @@
     "description": "The message string that should be sent to the add-on."
   },
   "commandSettingDescriptionParseMessage": {
-    "message": "Určuje, zda má být zpráva serializovaná jako JavaSkriptový objekt.",
+    "message": "Určuje, zda má být zpráva serializovaná jako JavaScriptový objekt.",
     "description": "Determines if the message should be serialized as a JavaScript object."
   },
   "commandSettingDescriptionTabOrder": {
@@ -1164,7 +1172,7 @@
     "description": "Orders the displayed tabs by a specific characteristic."
   },
   "commandSettingDescriptionTabIncludeCurrent": {
-    "message": "Určuje, zda by měl být zahrnut aktuálně aktivní panel.",
+    "message": "Určuje, zda by měl být zahrnut aktivní panel.",
     "description": "Determines if the currently active tab should be included."
   },
   "commandSettingDescriptionNewWindowFocus": {
@@ -1186,7 +1194,7 @@
     "description": "The target URL cannot be opened. Click here for more information."
   },
   "commandErrorNotificationMessageNotSerializeable": {
-    "message": "Daný řetězec zprávy nemohl být zpracován jako JavaSkriptový objekt. Pro více informací klikněte zde.",
+    "message": "Zadaný řetězec zprávy nemohl být zpracován jako JavaScriptový objekt. Pro více informací klikněte zde.",
     "description": "The specified message string could not be parsed to a JavaScript object. Click here for more information."
   },
   "commandErrorNotificationMessageMissingRecipient": {
@@ -1268,7 +1276,7 @@
     "description": "Save"
   },
   "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "Toto gesto je již použito u akce \"$COMMAND$\".",
+    "message": "Toto gesto je již použito u příkazu \"$COMMAND$\".",
     "description": "This gesture is already in use by \"$COMMAND$\".",
     "placeholders": {
       "command": {
@@ -1326,47 +1334,47 @@
     "description": "Default theme"
   },
   "welcomePageUpperSectionReference": {
-    "message": "Gesturefy has been successfully installed.",
+    "message": "Gesturefy byl úspěšně nainstalován.",
     "description": "Gesturefy has been successfully installed."
   },
   "welcomePageUpperSectionHeadline": {
-    "message": "Never done a mouse gesture before?\r\n Try it out right now!",
+    "message": "Nikdy jste nedělali gesto myší?\nZkuste to právě teď!",
     "description": "Never done a mouse gesture before?\r\n Try it out right now!"
   },
   "welcomePageUpperSectionTutorialStep01": {
-    "message": "Press and hold the right mouse button",
+    "message": "Stiskněte a držte pravé tlačítko myši",
     "description": "Press and hold the right mouse button"
   },
   "welcomePageUpperSectionTutorialStep02": {
-    "message": "Drag down your mouse",
+    "message": "Táhněte myší dolů",
     "description": "Drag down your mouse"
   },
   "welcomePageUpperSectionTutorialStep03": {
-    "message": "Release the right mouse button",
+    "message": "Uvolněte pravé tlačítko myši",
     "description": "Release the right mouse button"
   },
   "welcomePageLowerSectionReference": {
-    "message": "You scrolled to the bottom of the page.",
+    "message": "Posunuli jste se na konec stránky.",
     "description": "You scrolled to the bottom of the page."
   },
   "welcomePageLowerSectionHeadline": {
-    "message": "Congratulations, you successfully accomplished your very first mouse gesture!",
+    "message": "Blahopřeji, úspěšně jste dokončil své první gesto myši!",
     "description": "Congratulations, you successfully accomplished your very first mouse gesture!"
   },
   "welcomePageLowerSectionGetStartedText": {
-    "message": "Create as many gestures as you want to suit your individual browsing style and make your daily browsing easier, faster and a lot more fun. Get started now and personalize Gesturefy!",
+    "message": "Vytvořte si neomezené množství gest, která budou vyhovovat Vašemu způsobu prohlížení webu. Každodenní brouzdání bude snazší, rychlejší a mnohem zábavnější. Začněte nyní a přizpůsobte si Gesturefy!",
     "description": "Create as many gestures as you want to suit your individual browsing style and make your daily browsing easier, faster and a lot more fun. Get started now and personalize Gesturefy!"
   },
   "welcomePageLowerSectionGetStartedLink": {
-    "message": "Set Up Your Gestures",
+    "message": "Nastavte si svá gesta",
     "description": "Set Up Your Gestures"
   },
   "welcomePageLowerSectionLearnMoreText": {
-    "message": "Still confused? Click the link below for a quick break-down and if you can't get Gesturefy up and running you can also find a troubleshooting guide there.",
+    "message": "Stále tápete? Klikněte na odkaz níže pro rychlý přehled. Pokud se Vám nepodaří rozjet Gesturefy, průvodce odstraňováním potíží naleznete tamtéž.",
     "description": "Still confused? Click the link below for a quick break-down and if you can't get Gesturefy up and running you can also find a troubleshooting guide there."
   },
   "welcomePageLowerSectionLearnMoreLink": {
-    "message": "Learn More",
+    "message": "Zjistit více",
     "description": "Learn More"
   }
 }
