--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -4,7 +4,7 @@
     "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
-    "message": "$NAME$ Addon wurde aktualisiert!",
+    "message": "$NAME$ Add-on wurde aktualisiert!",
     "description": "Gesturefy add-on has been updated!",
     "placeholders": {
       "name": {
@@ -100,7 +100,7 @@
     "description": "Gesture sensitivity"
   },
   "settingLabelDisplayTrace": {
-    "message": "Gesten Spur anzeigen",
+    "message": "Gestenspur anzeigen",
     "description": "Display gesture trace"
   },
   "settingLabelTraceColor": {
@@ -212,7 +212,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
-    "message": "Bestimmt, ob die Linienstärke anwachsen sollte.",
+    "message": "Legt fest, ob die Liniendicke anwachsen soll.",
     "description": "Determines if the line thickness should grow."
   },
   "settingDescriptionDisplayCommand": {
@@ -272,7 +272,7 @@
     "description": "Wheel gesture"
   },
   "extraLabelWheelMouseButton": {
-    "message": "Mausrad-Gesten Mausbutton",
+    "message": "Mausrad-Gesten Maustaste",
     "description": "Wheel gesture mouse button"
   },
   "extraLabelWheelSensitivity": {
@@ -304,8 +304,8 @@
     "description": "Information:"
   },
   "blacklistTextInformation": {
-    "message": "Ein ULR-Muster hinzufügen, um Gesturefy für bestimmte Webseiten zu deaktivieren. Das Muster erlaubt \"*\" als Platzhalter und muss in folgender Form sein <scheme>:\/\/<host><path>.",
-    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>."
+    "message": "Ein ULR-Muster hinzufügen, um Gesturefy für bestimmte Webseiten zu deaktivieren. Das Muster erlaubt \"*\" als Platzhalter und muss in folgender Form sein <scheme>://<host><path>.",
+    "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
   "blacklistPlaceholderURL": {
     "message": "URL-Muster eingeben",
@@ -492,23 +492,23 @@
     "description": "New private window"
   },
   "commandLabelMoveTabToStart": {
-    "message": "Verschiebt den Tab an den Anfang",
+    "message": "Verschiebe den Tab an den Anfang",
     "description": "Move tab to start"
   },
   "commandLabelMoveTabToEnd": {
-    "message": "Verschiebt den Tab an das Ende",
+    "message": "Verschiebe den Tab an das Ende",
     "description": "Move tab to end"
   },
   "commandLabelMoveTabToNewWindow": {
-    "message": "Verschiebt den Tab in ein neues Fenster",
+    "message": "Verschiebe den Tab in ein neues Fenster",
     "description": "Move tab to new window"
   },
   "commandLabelMoveLeftTabsToNewWindow": {
-    "message": "Verschiebt die linken Tabs in ein neues Fenster",
+    "message": "Verschiebe die linken Tabs in ein neues Fenster",
     "description": "Move left tabs to new window"
   },
   "commandLabelMoveRightTabsToNewWindow": {
-    "message": "Verschiebt die rechten Tabs in ein neues Fenster",
+    "message": "Verschiebe die rechten Tabs in ein neues Fenster",
     "description": "Move right tabs to new window"
   },
   "commandLabelCloseWindow": {
@@ -978,6 +978,14 @@
   "commandSettingLabelNewTabPositionAfter": {
     "message": "Danach",
     "description": "after"
+  },
+  "commandSettingLabelNewTabPositionStart": {
+    "message": "Anfang",
+    "description": "start"
+  },
+  "commandSettingLabelNewTabPositionEnd": {
+    "message": "Ende",
+    "description": "end"
   },
   "commandSettingLabelNewTabFocus": {
     "message": "Neuen Tab fokussieren",
