New Crowdin translations (#441)
updated Crowdin translations

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -56,7 +56,7 @@
     "description": "right"
   },
   "settingLabelMouseButtonMiddle": {
-    "message": "mitte",
+    "message": "Mitte",
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
@@ -172,7 +172,7 @@
     "description": "right"
   },
   "settingLabelDirectionsTextAlignCenter": {
-    "message": "zentriert",
+    "message": "Zentriert",
     "description": "center"
   },
   "settingLabelUpdateNotification": {
@@ -348,7 +348,7 @@
     "description": "View source code"
   },
   "aboutLinkAddon": {
-    "message": "Addon-Seite anzeigen",
+    "message": "Add-on-Seite anzeigen",
     "description": "View add-on page"
   },
   "aboutRestoreNotificationSuccess": {
@@ -960,7 +960,7 @@
     "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
   },
   "commandDescriptionSendMessageToOtherAddon": {
-    "message": "Sendet eine benutzerdefinierte Nachricht an ein anderes Addon. Dies ermöglicht die Verwendung anderer Add-On-Funktionen.",
+    "message": "Sendet eine benutzerdefinierte Nachricht an ein anderes Add-On. Dies ermöglicht die Verwendung anderer Add-On-Funktionen.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
   },
   "commandSettingLabelNewTabPosition": {
@@ -1035,6 +1035,14 @@
     "message": "Angepinnte Tabs mit einbeziehen",
     "description": "Include pinned tabs"
   },
+  "commandSettingLabelTabCycling": {
+    "message": "Tabs periodisch durchlaufen",
+    "description": "Tab cycling"
+  },
+  "commandSettingLabelExcludeDiscarded": {
+    "message": "Verworfene Tabs ausschließen",
+    "description": "Exclude discarded tabs"
+  },
   "commandSettingLabelOpenEmptyTab": {
     "message": "Öffne leeren Tab",
     "description": "Open empty tab"
@@ -1056,7 +1064,7 @@
     "description": "Custom URL"
   },
   "commandSettingLabelAddonId": {
-    "message": "Addon ID",
+    "message": "Add-On ID",
     "description": "Add-on ID"
   },
   "commandSettingLabelAddonMessage": {
@@ -1135,6 +1143,14 @@
     "message": "Legt fest, ob angepinnte Tabs als ganz linke Tabs behandelt werden sollen.",
     "description": "Determines if pinned tabs should be treated as the leftmost tabs."
   },
+  "commandSettingDescriptionTabCycling": {
+    "message": "Legt fest, ob die Tabs in einem Zyklus durchlaufen werden sollen.",
+    "description": "Determines if the tabs should be cycled through in a loop."
+  },
+  "commandSettingDescriptionExcludeDiscarded": {
+    "message": "Legt fest, ob nicht geladene Tabs übersprungen werden sollen.",
+    "description": "Determines if tabs that are not loaded should be skipped."
+  },
   "commandSettingDescriptionOpenEmptyTab": {
     "message": "Legt fest, ob ein leerer Tab geöffnet werden soll, wenn keine URL oder kein Link ausgewählt wurde.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
@@ -1156,11 +1172,11 @@
     "description": "The URL that should be opened."
   },
   "commandSettingDescriptionAddonId": {
-    "message": "Die Erweiterungs-ID des Add-ons, an das die Nachricht gesendet werden soll.",
+    "message": "Die ID des Add-ons, an das die Nachricht gesendet werden soll.",
     "description": "The extension ID of the add-on the message should be sent to."
   },
   "commandSettingDescriptionAddonMessage": {
-    "message": "Die Nachricht, die zum Addon geschickt werden soll.",
+    "message": "Die Nachricht, die zum Add-On geschickt werden soll.",
     "description": "The message string that should be sent to the add-on."
   },
   "commandSettingDescriptionParseMessage": {
@@ -1198,7 +1214,7 @@
     "description": "The specified message string could not be parsed to a JavaScript object. Click here for more information."
   },
   "commandErrorNotificationMessageMissingRecipient": {
-    "message": "Die angegebene Erweiterungs-ID gehört entweder nicht zu einem vorhandenen Addon oder das Addon kann keine Nachrichten empfangen. Klicke hier für weitere Informationen.",
+    "message": "Die angegebene ID gehört entweder nicht zu einem vorhandenen Add-On oder das Add-On kann keine Nachrichten empfangen. Klicke hier für weitere Informationen.",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
   "commandBarTitle": {
